Fixed the screenshot url.

--- a/README
+++ b/README
@@ -32,5 +32,5 @@ Hidden features:
 	o feeds will be refreshed every 30 mins. The icon gets brighter when
 	  unread news are available and blinks for a seconds as news arrive.
 
--- Ricardo Cruz <rpmcruz@alunos.dcc.fc.up.pt>, May 2009
+-- Ricardo Cruz <ricardo.pdm.cruz@gmail.com>, May 2009
 
